# q3kafkaweb

./: .gitignore  .style.yapf  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
q3web/: main.py  message_queue.py  package-lock.json  package.json  server.py  test_message_queue.py
q3web/public/: index.html
q3web/src/: App.css  App.js  GameState.js  chart.js  index.css  main.js
q3web/src/components/: ChatMessage.css  ChatMessage.js  ChatViewer.css  ChatViewer.js  ColorSpan.js  ColoredText.js  ConnectPanel.js  GameEndedPopup.css  GameEndedPopup.js  KillEventsViewer.css  KillEventsViewer.js  KillMessage.js  MapImage.js  PlayerKillsChart.js  PlayerKillsPie.js  WeaponIcons.js  WeaponKillsChart.js  WeaponKillsPie.js
q3web/src/components/Layout/: Layout.js
q3web/static/js/: main.js
q3web/templates/: base.html  index.html
q3webApi/: main.py  message_queue.py  server.py  test_message_queue.py
q3webApi/static/js/: main.js  stats.js  toplists.js
q3webApi/templates/: base.html  index.html
src/: app.py  message_queue.py
src/static/css/: main.css
src/static/js/: main.js
src/templates/: base.html  index.html
