[project]
name = "q3web"
description = "Read q3 events from kafka and visualise them"
version = "0.0.1"
authors = [
    { name = "Marco Siebecke", email = "marco@siebecke.se" }
]
dependencies = [
    "click",
    "Flask",
    "bootstrap-flask",
    "Flask-SocketIO",
    "kafka-python",
    "gevent",
    "gevent-websocket"
]

[project.scripts]
q3web = "q3web.main:cli"
